name:               HogbomCleanHaskellBenchmark
version:            0.1.0.0
synopsis:           Simple Hogbom Clean Benchmark
description:        A trivial implementation of the Hogbom Clean algorithm
                    for the purposes of benchmarking Haskell
license:            GPL-2
license-file:       LICENSE
author:             Ben Humphreys
maintainer:         ben.h@bigpond.net.au
build-type:         Simple
cabal-version:      >=1.8
stability:          experimental

executable Main
  main-is:          Main.hs
  other-modules:    HogbomClean,
                    Image
  build-depends:    base >= 4.5,
                    bytestring,
                    binary,
                    vector,
                    data-binary-ieee754,
                    time
  ghc-options:      -Wall -O2
